packages/portfolio-site/main/default/objects/Project_Asset__c/Project_Asset__c.object-meta.xml
<CustomObject>
    <label>Project Asset</label>
    <nameField>
        <label>Project Asset Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Assets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>