packages/portfolio-site/main/default/objects/Project_Asset__c/fields/Alt_Text__c.field-meta.xml
<CustomField>
    <fullName>Alt_Text__c</fullName>
    <description>WCAG 2.1 required for screen readers</description>
    <label>Alt Text</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>