packages/portfolio-site/main/default/objects/Project_Asset__c/fields/External_URL__c.field-meta.xml
<CustomField>
    <fullName>External_URL__c</fullName>
    <description>Link to asset.</description>
    <label>External URL</label>
    <type>Url</type>
</CustomField>